# multi-agent-rag-system

./: .cursorrules  .env.example  Makefile  pyproject.toml
app/: __init__.py  config.py  constants.py  main.py
app/agents/: __init__.py  base.py  retriever.py
app/briefings/: __init__.py  router.py  schemas.py
app/briefings/agents/: __init__.py
app/core/: __init__.py  constants.py  logging.py
app/documents/: __init__.py  retriever.py  router.py  schemas.py
app/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
app/memory/: __init__.py  base.py  factory.py  faiss_store.py  pinecone_store.py
app/schemas/: __init__.py  document.py  retrieval.py  task.py
dashboard/: __init__.py  app.py  config.py
dashboard/pages/: documents.py  home.py
docs/: INGESTION_PIPELINE.md  README.md
knowledge_base/case_studies/: case_study_femsa_controlower.md  case_study_medtech.md
knowledge_base/competitors/: competitor_accenture_deloitte.md  competitor_alpha_analysis.md  competitor_beta_analysis.md  competitor_mckinsey_bcg.md
knowledge_base/deals/: deal_001_medtech_healthcare.md  deal_002_globex_fintech.md  deal_003_initech_manufacturing.md  deal_004_cocacola_supply_chain.md  deal_005_bimbo_rgm.md  deal_006_retailer_midmarket.md
knowledge_base/industries/: consulting_latam_playbook.md  fintech_playbook.md  growth_strategy_playbook.md  healthcare_playbook.md  supply_chain_playbook.md
knowledge_base/products/: analytics_capabilities.md  pricing_guide.md  product_overview.md
tests/: test_api.py  test_retriever_agent.py  test_schemas.py  test_vector_store.py
(+15 files in other folders)
