[project]
name = "multi-agent-rag-system"
version = "0.2.0"
description = "Deal Intelligence Platform - Multi-agent RAG system for sales teams"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "langchain",
  "langchain-openai",
  "langchain-community",
  "faiss-cpu",
  "tiktoken",
  "pinecone",
  # Dashboard
  "streamlit",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "dashboard"]
